--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # supabase URL,KEY
 
-REACT_APP_SUPABASE_URL=https://owzolxwynqbhhtzclyey.supabase.co
+REACT_APP_SUPABASE_URL=https://watykcugqtassfsifbmg.supabase.co
 
-REACT_APP_SUPABASE_KEY=sb_publishable_LPgSyLz9AM-QP27LvmcatQ_ivvtNAAU
+REACT_APP_SUPABASE_KEY=sb_publishable_dYKejaq6pozRR2p3GTBuyA_jBZOZtMV
