--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://hyojunez99.github.io/stay/"
+  "homepage": "https://dahye0937-beep.github.io/stay-main/"
 }
